Closed Bug 1737740 Opened 3 years ago Closed 3 years ago

Fix rlbox wasm sandboxed Hunspell mem leak and OOM handling

Categories

(Core :: Spelling checker, defect, P3)

All
Unspecified
defect

Tracking

()

RESOLVED FIXED
95 Branch
Tracking Status
firefox95 --- fixed

People

(Reporter: shravanrn, Assigned: shravanrn)

References

Details

Attachments

(1 file)

No description provided.
Summary: Fix mem-leak inside the rlbox wasm sandboxed hunspell code → Fix rlbox wasm sandboxed Hunspell mem leak and OOM handling
Pushed by bholley@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/004f3280a471
Fix rlbox wasm sandboxed Hunspell mem leak and OOM handling r=glandium,deian
Status: NEW → RESOLVED
Closed: 3 years ago
Resolution: --- → FIXED
Target Milestone: --- → 95 Branch
Blocks: 1758626
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: