Bug 1737740 - Fix rlbox wasm sandboxed Hunspell mem leak and OOM handling r=glandium,deian

Differential Revision: https://phabricator.services.mozilla.com/D127736