extensions/spellcheck/hunspell/glue/mozHunspellRLBoxHost.cpp
@@ -146,12 +146,19 @@ tainted_hunspell<bool> mozHunspellCallbacks::GetLine(
       mozHunspellCallbacks::GetMozHunspellFileMgrHost(t_aFd);
   std::string line;
   bool ok = inst.GetLine(line);
+  // If the getline fails, return a null which is "graceful" failure
   if (ok) {
-    // copy the line into the sandbox
+    // Copy the line into the sandbox. This memory is eventually freed by
+    // hunspell.
     size_t size = line.size() + 1;
     tainted_hunspell<char*> t_line = aSandbox.malloc_in_sandbox<char>(size);
-    MOZ_RELEASE_ASSERT(t_line);
-    rlbox::memcpy(aSandbox, t_line, line.c_str(), size);
+
+    if (t_line == nullptr) {
+      // If malloc fails, we should go to "graceful" failure path
+      ok = false;
+    } else {
+      rlbox::memcpy(aSandbox, t_line, line.c_str(), size);
+    }
     *t_aLinePtr = t_line;
   } else {
     *t_aLinePtr = nullptr;
